# surya

./: CITATION.cff  MODEL_LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  cla.yml  scripts.yml
static/docs/: multilingual.md
surya/: models.py  settings.py
surya/common/: blank.py  polygon.py  predictor.py  util.py
surya/debug/: text.py
surya/detection/: __init__.py  loader.py  processor.py
surya/inference/: __init__.py  pipeline.py  prompts.py  schema.py  util.py
surya/inference/backends/: __init__.py  base.py  llamacpp.py  openai_client.py  spawn.py  vllm.py
surya/input/: load.py  processing.py
surya/layout/: __init__.py  label.py  schema.py
surya/ocr_error/: __init__.py  loader.py  tokenizer.py
surya/recognition/: __init__.py  schema.py
surya/scripts/: build_gguf.py  config.py  detect_layout.py  ocr_text.py  screenshot_app.py  streamlit_app.py  table_recognition.py
surya/scripts/templates/: surya_screenshot.html
tests/: test_detection.py  test_layout.py  test_recognition.py  test_table_rec.py
